syntax = "proto3";

package consensuspb;

message ConsensusRoot {
    int64 timestamp = 1;
    bytes proposer = 2;

    bytes dynasty_root = 3;
}
